# mycelium-chat

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  docker-compose.yml  element-config.json  homeserver.yaml  log.config  synapse-init.sh
.github/workflows/: deploy.yml
auth-provider/: config.yaml  requirements.txt  setup.py  synapse_tf_connect.py
bridge/: Cargo.toml
bridge/src/: config.rs  discovery.rs  lib.rs  main.rs  mycelium.rs  types.rs
discovery-service/: Cargo.toml
discovery-service/src/: config.rs  main.rs  persistence.rs
docs/: implementation-plan.md  tf-connect-troubleshooting.md  todo.md
docs/dev/archive/: architecture.md  roadmap.md  todo.md  user-discovery.md
docs/dev/current/: README.md  architecture.md  deployment-guide.md  roadmap.md  technical-specs.md  tf-connect-integration.md  todo.md  ux-dx-ox.md
docs/ops/: deployment.md  environment.md
docs/ops/archive/: README.md
docs/ops/current/: deployment.md  monitoring.md  multi-server.md  single-server.md
element-config/: config.json  index.html  manifest.json  welcome.html
element-config/themes/threefold/: theme.css
installers/linux/: install.sh
installers/macos/: install.sh
installers/windows/: install.ps1
mock-bridge/: health
mock-discovery/: health  servers
tests/: README.md
tests/integration/: test_federation.py  test_performance.py  test_runner.sh  test_security.py
web/: .env.example  .gitignore  index.html  package-lock.json  package.json  vite.config.ts
web-archive/: .env.example
web-archive/src/: App.tsx  callback.html  index.css
web-archive/src/components/Auth/: AuthProvider.tsx
web-archive/src/components/Chat/: ChatInterface.tsx
web-archive/src/components/Contacts/: ContactList.tsx
web-archive/src/services/: tfconnect.ts
web-archive/src/types/: index.ts
web/src/: callback.html
web/src/components/Auth/: AuthProvider.tsx  LoginScreen.tsx
web/src/services/: discovery.ts  mycelium.ts  tfconnect.ts
(+3 files in other folders)
